Fix alignment bug on Safari

--- a/app/styles/content/_text.scss
+++ b/app/styles/content/_text.scss
@@ -88,6 +88,7 @@ li {
     color: #727272;
 
     @include mq(sm) {
+      display: block;
       flex-shrink: 0;
       width: 6.5em;
       margin-right: 1em;
